Initial commit from remote server

--- a/Notebooks/database.ipynb
+++ b/Notebooks/database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,30 +136,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-11-02 00:00:00\n",
-      "2024-11-25 00:00:00\n",
-      "Deleted 0 documents from comments\n",
-      "Deleted 0 documents from commentdislikes\n",
-      "Deleted 0 documents from postdislikes\n",
-      "Deleted 15 documents from users\n",
-      "Deleted 0 documents from idstorages\n",
-      "Deleted 0 documents from posts\n",
-      "Deleted 0 documents from subscriptions\n",
-      "Deleted 0 documents from sampleCollection\n",
-      "Deleted 0 documents from commentlikes\n",
-      "Deleted 0 documents from viewposts\n",
-      "Deleted 0 documents from readposts\n",
+      "2024-11-03 00:00:00\n",
+      "2024-11-26 00:00:00\n",
+      "Deleted 23 documents from commentlikes\n",
       "Deleted 0 documents from reposts\n",
-      "Deleted 0 documents from postlikes\n",
-      "Deleted 0 documents from selectedusers\n",
+      "Deleted 0 documents from subscriptions\n",
+      "Deleted 57 documents from posts\n",
       "Deleted 0 documents from users5\n",
+      "Deleted 0 documents from idstorages\n",
+      "Deleted 7 documents from postlikes\n",
+      "Deleted 0 documents from selectedusers\n",
+      "Deleted 15 documents from users\n",
+      "Deleted 0 documents from postdislikes\n",
+      "Deleted 0 documents from sampleCollection\n",
+      "Deleted 0 documents from viewposts\n",
+      "Deleted 0 documents from commentdislikes\n",
+      "Deleted 43 documents from comments\n",
+      "Deleted 0 documents from readposts\n",
       "Data deletion complete.\n"
      ]
     }
@@ -175,7 +175,7 @@
     "client = MongoClient(database_url)\n",
     "\n",
     "# Access the specific database\n",
-    "db_name = 'test_llm_1'\n",
+    "db_name = 'test_llm_2'\n",
     "db = client[db_name]\n",
     "\n",
     "three_weeks_ago = datetime.now() - timedelta(days=10) #datetime.now() - timedelta(weeks=3)\n",
@@ -314,16 +314,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Earliest: 2024-11-19 18:40:48.163000 in collection postlikes\n",
-      "Latest: 2024-11-20 08:35:50.340000 in collection posts\n",
-      "Time difference: 13:55:02.177000\n"
+      "Earliest: 2024-11-22 10:36:24.906000 in collection posts\n",
+      "Latest: 2024-11-22 12:23:59.337000 in collection posts\n",
+      "Time difference: 1:47:34.431000\n"
      ]
     }
    ],
